# hbb-run3

./: .gitignore  .pre-commit-config.yaml  README.md  local_hvv.sh  lumi.json  make_histos.py  plot_histos.py  print_pkl.py  pyproject.toml  requirements.txt  submit.py  xsec.ipynb  xsec.json
boostedhiggs/: common_vars.py  corr-tests.ipynb  corrections.py  pyproject.toml  run.py  run_utils.py  xsecs.py
boostedhiggs/.ipynb_checkpoints/: corrections-checkpoint.py
boostedhiggs/processors/: GenSelection.py  HistogramsforCombine.ipynb  hbbprocessor.py  ptSkimmer.py
boostedhiggs/src/hbb/processors/: __init__.py
condor/: submit.py
data/: README.md  make_filelists.py  nanoindex_v12v2.json  nanoindex_v12v2_private.json  nanoindex_v15_private.json  rucio_utils.py  v12.py  v12v2_private.py  v14_private.py  v15.py  v15_private.py
fitting/: README.md  card_utils.py  draw_PFratio_QCDMC.C  draw_PFratio_QCDMC.py  draw_datafit.C  draw_datafit.py  fit_env.yml  make-hists-cr.py  make-hists-sig.py  make-pkl.py  make_datacards.py  make_hists.py  make_hists_sig.py  make_hists_sig_dask.py  make_pkl.py  make_pkl_dask.py  make_zmumu_plots.py  metfilters.json  muon_triggers.json  plot_control.py  plot_ftest.py  pmap_run3.json  run_ftest.py  setup.json  setup_sr.json  setup_zgcr.json  setup_zmmcr.json  sf.json  submit-make-hists-sig.py  submit-make-pkl.py  submit.py  template_utils.py  test_processor.py  tmp.py  triggers.json  xsec.json
fitting/initial_vals/: initial_vals_vbf_cc.json
infiles/2022/: 2022_EWKV.json  2022_Wgamma.json  2022_Zgamma.json
infiles/2022EE/: 2022EE_EWKV.json  2022EE_Wgamma.json  2022EE_Zgamma.json
infiles/2023/: 2023_EWKV.json  2023_Wgamma.json  2023_Zgamma.json  2023_singlet.json
infiles/2023BPix/: 2023BPix_EWKV.json  2023BPix_Wgamma.json  2023BPix_Zgamma.json  2023BPix_singlet.json
python/: README.md  axis_info.py  common.py  load_one_sample.ipynb  make_histos.py  plot_histos.py  plotting.py  pp_cutflow.py  style_hbb.yaml
python/BDT_EAF/: BatchedBDT.ipynb  EvaluateMCBDT.ipynb  MultiClassBDT_23Oct25.json  MultiClassBDT_processor.ipynb  Plot_parquet_files.ipynb  Plot_parquet_filesV2.ipynb  dEta_jj.ipynb  parquet_processor.ipynb  preBDT_processor.ipynb  preBDT_processorV2.ipynb  samples.json  samples_noQCD2000.json  sumW.json  yield_table.csv
src/: run.py  submit.py
src/condor/: check_jobs.py  submit.py  submit.templ.jdl  submit.templ.sh  submit_from_yaml.py
src/hbb/: EWHiggs_corrections.py  common.py  common_vars.py  corrections.py  dilep_triggers.json  egamma_triggers.json  jerc_eras.py  metfilters.json  plotting.py  rdf_schema.py  run_utils.py  taggers.json  taggers.py  triggers.json  utils.py  vjets_corrections.ipynb  xsecs.py
src/hbb/data/: get_jerc.sh
src/hbb/data/btag/: compile_btag_eff.py  mc_eff_btagPNetB_2022.pkl  mc_eff_btagPNetB_2022EE.pkl  mc_eff_btagPNetB_2023.pkl  mc_eff_btagPNetB_2023BPix.pkl  mc_eff_btagUParTAK4B_2024.pkl
src/hbb/data/vjets/: vjets_corrections.json  vjets_corrections_2flavorDY.json  vjets_corrections_3flavorDY.json
src/hbb/data/vjets/20260325/: run_VJets_had_LO_Wto2Q-3Jets_Bin-HT-100to400.coffea  run_VJets_had_LO_Wto2Q-3Jets_Bin-HT-1500to2500.coffea  run_VJets_had_LO_Wto2Q-3Jets_Bin-HT-2500.coffea  run_VJets_had_LO_Wto2Q-3Jets_Bin-HT-400to800.coffea  run_VJets_had_LO_Wto2Q-3Jets_Bin-HT-800to1500.coffea  run_VJets_had_LO_Zto2Q-4Jets_Bin-HT-100to400.coffea  run_VJets_had_LO_Zto2Q-4Jets_Bin-HT-1500to2500.coffea  run_VJets_had_LO_Zto2Q-4Jets_Bin-HT-2500.coffea  (+20 more)
src/hbb/processors/: GenSelection.py  SkimmerABC.py  __init__.py  categorizer.py  hbbprocessor.py  objects.py
src/submit_configs/: btag_eff.yaml  btag_eff_allMC.yaml  egamma.yaml  hbb.yaml  hbb_2023.yaml  hbb_condor.yaml  hbb_example.yaml  hvv.yaml  muon.yaml
